--- a/index.html
+++ b/index.html
@@ -49,6 +49,51 @@
                 </video>
             </div>
         </div>
+        <!--Watch everywere-->
+        <div class="second-section-container">
+            <div class="left-column">
+                <img src="assets/images/computer.png">
+                <video class="video-2" autoplay="" playsinline="" muted="" loop="">
+                    <source src="assets/videos/video2.m4v" type="video/mp4">
+                </video>
+            </div>
+            <div class="right-column">
+                <h1>Watch everywhere.</h1>
+                <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</h3> 
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <!--Create profile for kids-->
+        <div class="third-section-container">
+            <div class="left-column">
+                <h1>Create profiles for kids.</h1>
+                <h3>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</h3>
+            </div>
+            <div class=" right-column">
+                <img src="assets/images/create_profile.png">
+            </div>
+        </div>
+        <!--Download your shows to watch-->
+        <div class="fourth-section-container">
+            <div class="left-column">
+                <img class= "eleven" src="assets/images/download.jpg">
+                <div class="box">
+                    <img class="boxshot" src="assets/images/boxshot.png" alt="">
+                    <p>
+                        Stranger Things
+                        <br>
+                        <a href="#">Downloading...</a>
+                    </p>
+                    <img class="download-gif" src="	https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif" alt="">
+                </div>
+            </div>
+            <div class="right-column">
+                <h1>Download your shows to watch offline.</h1>
+                <h3>Only available on ad-free plans.</h3>
+            </div>
+        </div>
     </section>
     <script src="assets/js/script.js"></script>
 </body>
